--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -4,7 +4,7 @@
     </ul>
     <div class="pull-right">
         <a href="#/createclient" class="btn btn-primary"><i class="icon-plus icon-white"></i> Create Client</a>
-          <a href="#/createclientwizard" class="btn btn-primary"><i class="icon-plus icon-white"></i> New Activation</a>
+          <a href="#/createclientnewwizard" class="btn btn-primary"><i class="icon-plus icon-white"></i> New Activation</a>
     </div>
 </div>
 <div class="row-fluid" ng-controller="ClientController">
