--- a/app/views/organization/createtaxmapping.html
+++ b/app/views/organization/createtaxmapping.html
@@ -63,7 +63,7 @@
           </div>
 
           <div class="offset3">
-            <a href="#/taxmapping"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <a href="#/chargecode"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
             <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
