--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -238,10 +238,16 @@
 
 </script>
 	<script type="text/ng-template" id="ApproveReconnect.html">
+
                     <div class="modal-header silver">
                         <h3 class="bolder">{{'dialog.reconnect.title.message' | translate}}</h3>
                     </div>
                     <div class="modal-body modal-big">
+       <div class="error" ng-show="errorStatus || errorDetails">
+		<label>{{'label.contract.error' | translate}}</label>
+		<label ng-show="errorStatus">{{errorStatus}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	    </div>
                        <h4>Are you sure?</h4>
                     </div>
                     <div class="modal-footer">
