--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -37,46 +37,263 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	 </div>
 	    
-	    
-   <div class="pull-right"> 
-	      <div class="btn-group">
-	         <!-- <a ng-show="orderData.status == 'ACTIVE'" href="#/editplan/{{plan.id}}" class="btn btn-primary"><i class="icon-wrench icon-white"></i> Update</a> -->
+</div>  
+   <div   class="row-fluid primarydiv"> 
+	       <span class="pull-right">
+	       <div class="btn-group">
+	         <a ng-show="orderData.status == 'ACTIVE'" href="#/editplan/{{plan.id}}" class="btn btn-primary"><i class="icon-wrench icon-white"></i> Update</a>
 	         <a ng-show="orderData.status == 'ACTIVE'" href="" ng-click="orderDisconnect(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class="icon-remove icon-white"></i> Disconnect</a>
 	         <a ng-show="orderData.status == 'DISCONNECTED'" ng-click="reconnect()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Reconnect</a>
 	         <a ng-show="orderData.contractPeriod != 'Perpectual' && orderData.status == 'ACTIVE' && orderData.isPrepaid == 'N'" href="" ng-click="orderRenew(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class="icon-edit icon-white"></i>Renewal</a>
 	         <a ng-show="orderData.isPrepaid == 'Y'"  href="" ng-click="orderRenew(orderPriceDatas[0].orderId)"class="btn btn-primary"><i class="icon-arrow-up icon-white"></i>TopUp</a>
-	         <a ng-show="orderData.status == 'ACTIVE'" ng-click="CommandCenter(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Command Center</a>
+	        <!--  <a ng-show="orderData.status == 'ACTIVE'" ng-click="CommandCenter(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Command Center</a> -->
 	         <a ng-show="orderData.status == 'PENDING'" ng-click="cancel()" class="btn btn-primary"><i class="icon-remove-circle icon-white"></i> Cancel</a>
-	      </div>
-	    </div>
-</div>
+	      
+	      <span  class="btn-group">
+              <a class="btn btn-primary dropdown-toggle" ng-show="orderData.status == 'ACTIVE'">
+                {{ 'label.button.more' | translate}}
+                <span class="caret"></span>
+              </a>
+              <ul style='margin-left:-95px;' class="dropdown dropdown-menu">
+                <li>
+                    <a ng-click="CommandCenter(orderPriceDatas[0].orderId)">Command Center</a>
+                </li>
+              </ul>
+          </span> 
+	      </div> 
+	      </span>
+	      <span ng-show="buttons.options" class="btn-group">
+              <a class="btn btn-primary dropdown-toggle">
+                {{ 'label.button.more' | translate}}
+                <span class="caret"></span>
+              </a>
+              <ul style='margin-left:-95px;' class="dropdown dropdown-menu">
+                <li class="{{button.icon}}" ng-repeat="button in buttons.options">
+                    <a ng-click="clickEvent(button.name.replace('button.',''), loandetails.id)">{{'label.'+ button.name | translate}}</a>
+                </li>
+              </ul>
+          </span> 
+	    </div><hr/>
 
-<div class="row paddedleft">
-		
-		<table width="100%">
+<div>
+<div class="row-fluid span" style="margin-left:-1px;margin-top: -20px">
+		<div class="span6">
+		<table width="100%" class="table table-striped table-bordered">
 			<tr>
 				<td width="20%">{{ 'label.plan.plancode' | translate }}</td>
 				<td width="70%">{{orderData.planCode}}</td>
 			</tr>
 			<tr>
-				<td>{{ 'label.order.contractperiod' | translate }}</td>
-				<td>{{orderData.contractPeriod}}</td>
+				<td width="20%">{{ 'label.order.contractperiod' | translate }}</td>
+				<td width="70%">{{orderData.contractPeriod}}</td>
 			</tr>
 			<tr>
-				<td>{{ 'label.order.status' | translate }}</td>
-				<td>{{orderData.status}}</td>
+				<td width="20%">{{ 'label.order.status' | translate }}</td>
+				<td width="70%">{{orderData.status}}</td>
 			</tr>
 			<tr>
-				<td>{{ 'label.order.useraction' | translate }}</td>
-				<td>{{orderData.userAction}}</td>
+				<td width="20%">{{ 'label.order.useraction' | translate }}</td>
+				<td width="70%">{{orderData.userAction}}</td>
 			</tr>
 			<tr>
-				<td>{{ 'label.plan.isprepaid' | translate }}</td>
-				<td>{{orderData.isPrepaid}}</td>
+				<td width="20%">{{ 'label.plan.isprepaid' | translate }}</td>
+				<td width="70%">{{orderData.isPrepaid}}</td>
 			</tr>
-			
 		</table>
+	</div>			
 	</div>
+
+<div class="row paddedleft">
+  <hr class="marginbottom"/>
+    <tabset >	
+      <tab heading="Order Info">
+      	<div class="span8" style="margin-left: 10px;margin-top: 30px;"> 
+            <table class="table table-bordered view-table">
+            	
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.id' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.id}}</span></td>
+                </tr>
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.price' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.price}}</span></td>
+                </tr>
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.status' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.status}}</span></td>
+                </tr>
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.startDate' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.startDate | DateFormat}}</span></td>
+                </tr>
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.currentDate' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.currentDate | DateFormat}}</span></td>
+                </tr>
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.cancelledStatus' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.cancelledStatus}}</span></td>
+                </tr>
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.contractPeriod' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.contractPeriod}}</span></td>
+                </tr>
+                <tr>
+                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.provisioningSys' | translate }}</td>
+                  <td><span class="padded-td">{{orderData.provisioningSys}}</span></td>
+                </tr>
+                
+            </table>
+          </div>
+      </tab>
+      
+      <tab heading="Order Services">
+      <div> 
+            <table class="table">
+        <thead>
+            <tr class="graybg">
+                <th>{{ 'table.order.id' | translate }}</th>
+                <th>{{ 'table.order.servicecode' | translate }}</th>
+                <th>{{ 'table.order.serviceDescription' | translate }}</th>
+                <th>{{ 'table.order.serviceType' | translate }}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="orderServicesData in orderServicesData">
+                <td>{{orderServicesData.id}}</td>            
+                <td>{{orderServicesData.servicecode}}</td>        
+                <td>{{orderServicesData.serviceDescription}}</td>
+                <td>{{orderServicesData.serviceType}}</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+      </tab>
+      
+      
+		 <tab heading="Pricing" >
+          <div> 
+            <table class="table">
+        <thead>
+            <tr class="graybg">
+                <th>{{ 'table.order.service' | translate }}</th>
+                <th>{{ 'table.order.chargecode' | translate }}</th>
+                <th>{{ 'table.order.billstartdate' | translate }}</th>
+                <th>{{ 'table.order.billenddate' | translate }}</th>
+                <th>{{ 'table.order.invoicetilldate' | translate }}</th>
+                <th>{{ 'table.order.billingcycle' | translate }}</th>
+                <th>{{ 'table.order.price' | translate }}</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="orderPriceData in orderPriceDatas">
+                <td>{{orderPriceData.chargeCode}}</td>            
+                <td>{{orderPriceData.chargeType}}</td>        
+                <td>{{orderPriceData.billStartDate | DateFormat}}</td>         
+                <td>{{orderPriceData.billEndDate| DateFormat}}</td>
+                <td>{{orderPriceData.invoiceTillDate| DateFormat}}</td>
+                <td>{{orderPriceData.billingCycle}}</td>
+                <td><input type="text" id="planCode" ng-model="orderPriceData.price" class="input-small" ng-change="status()"></td>
+                <td>
+                 <a ng-click="updatePrice(orderPriceData.id,orderPriceData.price)" class="btn btn-primary"><i class="icon-remove-circle icon-white"></i>Update</a>
+           </td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+        </tab>
+	
+	<tab heading="Pairing" >
+	<div class="row-fluid " >
+   <div id="msg"></div> 
+    <div class="pull-right">
+		         <a ng-show ="orderData.status != 'DISCONNECTED'"  href="#/association/{{clientId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i></a>
+		         <a ng-show ="orderData.status == 'DISCONNECTED'" ng-click="deAssociation()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> De Associate</a>
+		        <a ng-show  ="flag == true" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Hardware Swap</a>
+	        </div>
+	<table class="table">
+        <thead>
+            <tr class="graybg">
+                <th>Order Id</th>
+                <th>Plan Code</th>
+                <th>Item Code</th>
+                <th>Serial Number</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tbody>
+            <tr>                 
+                <td>{{association.orderId}}</a></td>
+                <td>{{association.planCode}}</a></td>
+                <td>{{association.itemCode}}</td>
+                <td>{{association.serialNum}}</td>
+            </tr>
+        </tbody>
+        </tbody>
+    </table>
+</div>
+	</tab>
+	
+	 <tab heading="Discount">
+	 <div> 
+            <table class="table">
+        <thead>
+            <tr class="graybg">
+                <th>{{ 'table.order.id' | translate }}</th>
+                <th>{{ 'table.order.discountcode' | translate }}</th>
+                <th>{{ 'table.order.discountdescription' | translate }}</th>
+                <th>{{ 'table.order.discountType' | translate }}</th>
+                <th>{{ 'table.order.discountAmount' | translate }}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="orderDiscountData in orderDiscountDatas">
+                <td>{{orderDiscountData.id}}</td>            
+                <td>{{orderDiscountData.discountcode}}</td>        
+                <td>{{orderDiscountData.discountdescription}}</td>
+                <td>{{orderDiscountData.discountType}}</td>
+                <td>{{orderDiscountData.discountAmount}}</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+      </tab>
+	
+	<tab heading="History">
+	<div class="row-fluid ">
+    
+	<table class="table">
+        <thead>
+            <tr class="graybg">
+                <th>{{ 'table.order.transactiondate' | translate }}</th>
+                <th>{{ 'table.order.actualdate' | translate }}</th>
+                <th>{{ 'table.order.processorderid' | translate }}</th>
+                <th>{{ 'table.order.transactiontype' | translate }}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="orderHistory in orderHistorydata">
+                <td>{{orderHistory.transactionDate | DateFormat}}</td>            
+                <td>{{orderHistory.actualDate | DateFormat}}</td>        
+                <td>{{orderHistory.PrepareRequsetId}}</td>         
+                <td>{{orderHistory.transactioType}}</td>
+                
+            </tr>
+        </tbody>
+    </table>
+</div>
+	</tab>
+	</tabset>
+	</div>
+</div>	
+	
+	
+	
+	
+	
+	
+<!-- 	
 <div class="row-fluid " >
    <div id="msg"></div> 
 	<table class="table">
@@ -141,9 +358,9 @@
         </tbody>
         </tbody>
     </table>
-</div>
+</div> -->
 
-<div class="row-fluid ">
+<!-- <div class="row-fluid ">
     
 	<table class="table">
         <thead>
@@ -167,7 +384,7 @@
             </tr>
         </tbody>
     </table>
-</div>
+</div> -->
 
 <script type="text/ng-template" id="OrderDisconnect.html">
 		
