--- a/app/views/system/createeventactionmapping.html
+++ b/app/views/system/createeventactionmapping.html
@@ -37,7 +37,7 @@
           <div class="control-group">
             <label class="control-label" for="process">{{'table.eventactionmapping.process' | translate }}</label>
             <div class="controls">
-              <input type="text" id="process" ng-model="formData.process">
+              <input type="text" id="process" ng-model="formData.process" ng-init="formData.process='workflow_events'">
             </div>
           </div>
           
