added home phone in create client,Item sale Tabs

--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -69,6 +69,14 @@
            </div>
               </div>
             </div>
+            
+            <div class="control-group">
+            	<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}</label>
+            		<div class="controls">
+              			<input type="text" id="homePhoneNumber" ng-model="formData.homePhoneNumber" >
+            		</div>
+          	</div>
+            
              <div class="control-group">
               <label class="control-label" for="email">{{'label.email' | translate}}</label>
               <div class="controls">
