--- a/app/views/clients/editclient.html
+++ b/app/views/clients/editclient.html
@@ -123,6 +123,16 @@
                 </div>
               </td>
             </tr>
+             <tr>
+              <td>
+                <div class="control-group">
+                  <label class="control-label">{{ 'label.homephone' | translate }}</label>
+                  <div class="controls">
+                    <input type="text" ng-model="formData.homePhoneNumber">
+                  </div>
+                </div>
+              </td>
+            </tr>
               <tr>
               <td>
                 <div class="control-group">
