--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -371,8 +371,89 @@
 	</div>
       </tab>
       <tab heading="Item Sale" select="getOneTimeSale()" active="SaleTab">
-      
-      <div class="pull-right">
+      <hr>
+ 		<div class="tabbable">
+  			<ul class="nav nav-tabs">
+				    <li class={{eventsaleC}}><a ng-click="eventsaleTab()" data-toggle="tab" >Event Sale</a></li>
+    				<li class={{eventorderC}}><a ng-click="eventorderCTab()" data-toggle="tab">Event Order</a></li>
+			    </ul>
+			<div class="tab-content">
+  
+		    <div id="pane1" class="tab-pane" ng-class="{active: eventsaleC}">
+				<div class="pull-right">
+					<a href="#/addonetimesale/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i> Add Sale</a>
+				</div>
+    
+			    <div>
+					<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name/Serial Number">
+					<table class="table">
+						<thead>
+							<tr class="graybg">
+							 	<th>{{'table.heading.id' | translate}}</th>
+								<th>{{'table.heading.saledate' | translate}}</th>
+								<th>{{'table.heading.itemcode' | translate}}</th>
+								<th>{{'table.heading.chargecode' | translate}}</th>
+								<th>{{'table.heading.quantity' | translate}}</th>
+								<th>{{'table.heading.totalprice' | translate}}</th>
+								<th>{{'table.heading.allocate' | translate}}</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="onetimesale in onetimesales  | filter:filterText">
+								<td>{{onetimesale.id}}</td>
+								<td><a href="#/viewonetimesale/{{onetimesale.id}}/{{client.id}}">{{onetimesale.saleDate | DateFormat}}</a></td>
+								<td><a href="#/viewonetimesale/{{onetimesale.id}}/{{client.id}}">{{onetimesale.itemCode}}</a></td>
+								<td>{{onetimesale.chargeCode}}</td>
+								<td>{{onetimesale.quantity}}</td> 
+								<td>{{onetimesale.totalPrice}}</td> 
+								<td>{{onetimesale.hardwareAllocated}}</td>
+							    <td><a href="#/allocatehardwareonetimesale/{{onetimesale.id}}/{{client.id}}" ng-show="onetimesale.hardwareAllocated == 'UNALLOCATED'" class="btn btn-primary"><i class="icon-move"></i></a></td>
+							    <td><a href="" ng-click="cancelSale(onetimesale.id,$index)" ng-show="onetimesale.hardwareAllocated == 'UNALLOCATED'" class="btn btn-primary" title="Cancel Sale"><i class="icon-remove"></i></a></td> 
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			  </div>
+			    
+			    
+			    
+			    <div id="pane2" class="tab-pane" ng-class="{active: eventorderC}">
+			    <div class="pull-right">
+					<a href="" class="btn btn-primary"><i class="icon-plus icon-white"></i> Add Event Order</a>
+				</div>
+			    	<div>
+					<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name/Serial Number">
+					<table class="table">
+						<thead>
+							<tr class="graybg">
+							 	<th>{{'table.heading.id' | translate}}</th>
+								<th>{{'table.heading.saledate' | translate}}</th>
+								<th>{{'table.heading.itemcode' | translate}}</th>
+								<th>{{'table.heading.chargecode' | translate}}</th>
+								<th>{{'table.heading.quantity' | translate}}</th>
+								<th>{{'table.heading.totalprice' | translate}}</th>
+								
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="eventOrders in eventOrders  | filter:filterText">
+								<td>{{eventOrders.id}}</td>
+								<td>{{eventOrders.eventName}}</td>
+								<td>{{eventOrders.bookedDate | DateFormat}}</td>
+								<td>{{eventOrders.chargeCode}}</td>
+								<td>{{eventOrders.eventPrice}}</td> 
+								<td>{{eventOrders.status}}</td> 
+								
+							</tr>
+						</tbody>
+					</table>
+					</div>
+			    </div>
+			    
+			  </div>
+			</div>
+      <!-- <div class="pull-right">
 		
 		<a href="#/addonetimesale/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i> Add Sale</a>
 	</div>
@@ -407,7 +488,7 @@
 				</tr>
 			</tbody>
 		</table>
-	</div>
+	</div> -->
 </tab>
 <tab heading="Financial Summary" select="getAllFineTransactions()">
     <div>
