Office id enable for Edit client

--- a/app/views/clients/editclient.html
+++ b/app/views/clients/editclient.html
@@ -48,7 +48,7 @@
               <div class="control-group">
                 <label class="control-label">{{ 'label.office' | translate }}<span class="required">*</span></label>
                 <div class="controls">
-                  <select ng-model="officeId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}" disabled="disabled">
+                  <select ng-model="officeId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}">
                 </select>
                 </div>
               </div>
