--- a/app/views/paymentgateway/editPaymentGateway.html
+++ b/app/views/paymentgateway/editPaymentGateway.html
@@ -43,7 +43,7 @@
 		</table>
 		
 		<div class="offset3">
-			<a href="#/viewmessage/{{formData.id}}"><button type="reset" class="btn">Cancel</button></a>
+			<a href="#/system"><button type="reset" class="btn">Cancel</button></a>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
